testsuite/tests/th/TH_cvt_IllegalSumAlt.stderr
TH_cvt_IllegalSumAlt.hs:7:2: error: [GHC-63966]
    Illegal sum alternative: 0
      Sum alternatives must start from 1
    When splicing a TH declaration: x = (# 1| | #)

